--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w"
+    "watch:sass": "node-sass assets/sass/main.scss assets/css/style.css -w"
   },
   "devDependencies": {
     "node-sass": "^4.13.1"
